fix side panel height percentage for no overflow

--- a/kbase-extension/static/kbase/css/kbaseNarrative.css
+++ b/kbase-extension/static/kbase/css/kbaseNarrative.css
@@ -561,7 +561,9 @@ p#site-title {
 }
 .kb-narr-side-panel-set{
     height:100%;
-
+}
+.kb-narr-side-panel-set:last-child{
+    height:50%;
 }
 
 .kb-overlay-dimmer {
